--- a/source/onnx-metadata.json
+++ b/source/onnx-metadata.json
@@ -36692,6 +36692,95 @@
     ]
   },
   {
+    "name": "StringSplit",
+    "module": "ai.onnx",
+    "version": 20,
+    "support_level": "common",
+    "description": "StringSplit splits a string tensor's elements into substrings based on a delimiter attribute and a maxsplit attribute.\n\nThe first output of this operator is a tensor of strings representing the substrings from splitting each input string on the `delimiter` substring. This tensor has one additional rank compared to the input tensor in order to store the substrings for each input element (where the input tensor is not empty). Note that, in order to ensure the same number of elements are present in the final dimension, this tensor will pad empty strings as illustrated in the examples below. Consecutive delimiters are not grouped together and are deemed to delimit empty strings, except if the `delimiter` is unspecified or is the empty string (\"\"). In the case where the `delimiter` is unspecified or the empty string, consecutive whitespace characters are regarded as a single separator and leading or trailing whitespace is removed in the output.\n\nThe second output tensor represents the number of substrings generated. `maxsplit` can be used to limit the number of splits performed - after the `maxsplit`th split if the string is not fully split, the trailing suffix of input string after the final split point is also added. For elements where fewer splits are possible than specified in `maxsplit`, it has no effect.",
+    "attributes": [
+      {
+        "name": "delimiter",
+        "type": "string",
+        "required": false,
+        "description": "Delimiter to split on. If left unset or set to the empty string (\"\"), the input is split on consecutive whitespace."
+      },
+      {
+        "name": "maxsplit",
+        "type": "int64",
+        "required": false,
+        "description": "Maximum number of splits (from left to right). If left unset (or if the number of possible splits are less than maxsplit), it will make as many splits as possible. Note that the maximum possible number of substrings returned with `maxsplit` specified is `maxsplit+1` since the remaining suffix after the `maxsplit`th split is included in the output."
+      }
+    ],
+    "inputs": [
+      {
+        "name": "X",
+        "type": "T1",
+        "description": "Tensor of strings to split."
+      }
+    ],
+    "min_input": 1,
+    "max_input": 1,
+    "outputs": [
+      {
+        "name": "Y",
+        "type": "T2",
+        "description": "Tensor of substrings representing the outcome of splitting the strings in the input on the delimiter. Note that to ensure the same number of elements are present in the final rank, this tensor will pad any necessary empty strings."
+      },
+      {
+        "name": "Z",
+        "type": "T3",
+        "description": "The number of substrings generated for each input element."
+      }
+    ],
+    "min_output": 2,
+    "max_output": 2,
+    "type_constraints": [
+      {
+        "description": "The input must be a UTF-8 string tensor",
+        "type_param_str": "T1",
+        "allowed_type_strs": [
+          "tensor(string)"
+        ]
+      },
+      {
+        "description": "Tensor of substrings.",
+        "type_param_str": "T2",
+        "allowed_type_strs": [
+          "tensor(string)"
+        ]
+      },
+      {
+        "description": "The number of substrings generated.",
+        "type_param_str": "T3",
+        "allowed_type_strs": [
+          "tensor(int64)"
+        ]
+      }
+    ],
+    "examples": [
+      {
+        "summary": "basic",
+        "code": "node = onnx.helper.make_node(\n    \"StringSplit\",\n    inputs=[\"x\"],\n    outputs=[\"substrings\", \"length\"],\n    delimiter=\".\",\n    maxsplit=None,\n)\n\nx = np.array([\"abc.com\", \"def.net\"]).astype(object)\n\nsubstrings = np.array([[\"abc\", \"com\"], [\"def\", \"net\"]]).astype(object)\n\nlength = np.array([2, 2], dtype=np.int64)\n\nexpect(\n    node,\n    inputs=[x],\n    outputs=[substrings, length],\n    name=\"test_string_split_basic\",\n)"
+      },
+      {
+        "summary": "consecutive_delimiters",
+        "code": "node = onnx.helper.make_node(\n    \"StringSplit\",\n    inputs=[\"x\"],\n    outputs=[\"substrings\", \"length\"],\n    delimiter=\"-\",\n    maxsplit=None,\n)\n\nx = np.array([\"o-n-n--x-\", \"o-n----nx\"]).astype(object)\n\nsubstrings = np.array(\n    [[\"o\", \"n\", \"n\", \"\", \"x\", \"\"], [\"o\", \"n\", \"\", \"\", \"\", \"nx\"]]\n).astype(object)\n\nlength = np.array([6, 6], dtype=np.int64)\n\nexpect(\n    node,\n    inputs=[x],\n    outputs=[substrings, length],\n    name=\"test_string_split_consecutive_delimiters\",\n)"
+      },
+      {
+        "summary": "empty_string_delimiter",
+        "code": "for delimiter, test_name in (\n    (\"\", \"test_string_split_empty_string_delimiter\"),\n    (None, \"test_string_split_no_delimiter\"),\n):\n    node = onnx.helper.make_node(\n        \"StringSplit\",\n        inputs=[\"x\"],\n        outputs=[\"substrings\", \"length\"],\n        delimiter=delimiter,\n        maxsplit=None,\n    )\n\n    x = np.array(\n        [\"hello world !\", \"  hello   world !\", \" hello world   ! \"]\n    ).astype(object)\n\n    substrings = np.array(\n        [\n            [\"hello\", \"world\", \"!\"],\n            [\"hello\", \"world\", \"!\"],\n            [\"hello\", \"world\", \"!\"],\n        ]\n    ).astype(object)\n\n    length = np.array([3, 3, 3], dtype=np.int64)\n\n    expect(\n        node,\n        inputs=[x],\n        outputs=[substrings, length],\n        name=test_name,\n    )"
+      },
+      {
+        "summary": "empty_string_split",
+        "code": "node = onnx.helper.make_node(\n    \"StringSplit\",\n    inputs=[\"x\"],\n    outputs=[\"substrings\", \"length\"],\n    delimiter=None,\n    maxsplit=None,\n)\n\nx = np.array([]).astype(object)\n\nsubstrings = np.array([]).astype(object).reshape(0, 0)\n\nlength = np.array([], dtype=np.int64)\n\nexpect(\n    node,\n    inputs=[x],\n    outputs=[substrings, length],\n    name=\"test_string_split_empty_tensor\",\n    output_type_protos=[\n        onnx.helper.make_tensor_type_proto(onnx.TensorProto.STRING, (0, None)),\n        None,\n    ],\n)"
+      },
+      {
+        "summary": "maxsplit",
+        "code": "node = onnx.helper.make_node(\n    \"StringSplit\",\n    inputs=[\"x\"],\n    outputs=[\"substrings\", \"length\"],\n    maxsplit=2,\n)\n\nx = np.array(\n    [[\"hello world\", \"def.net\"], [\"o n n x\", \"the quick brown fox\"]]\n).astype(object)\n\nsubstrings = np.array(\n    [\n        [[\"hello\", \"world\", \"\"], [\"def.net\", \"\", \"\"]],\n        [[\"o\", \"n\", \"n x\"], [\"the\", \"quick\", \"brown fox\"]],\n    ]\n).astype(object)\n\nlength = np.array([[2, 1], [3, 3]], np.int64)\n\nexpect(\n    node,\n    inputs=[x],\n    outputs=[substrings, length],\n    name=\"test_string_split_maxsplit\",\n)"
+      }
+    ]
+  },
+  {
     "name": "Sub",
     "module": "ai.onnx",
     "version": 1,
